# Raptor-Manager

./: .gitignore  LICENSE  README.md  biome.json  index.html  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx  Utils.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  config.rs  cookies.rs  crypticbridge.rs  decompiler.rs  hydrobridge.rs  installer.rs  ipa_installer.rs  lib.rs  macsploit.rs  main.rs  roblox.rs  updater.rs  versions.rs
src-tauri/src/binarycookies/: binarycookies.rs  cookie.rs  mod.rs  page.rs  utils.rs
src-tauri/src/medal/ast/src/: formatter.rs
src-tauri/src/medal/cfg/src/: function.rs  pattern.rs
src-tauri/src/medal/luau-lifter/src/: lib.rs  lifter.rs
src-tauri/src/medal/luau-lifter/src/deserializer/: function.rs
src/components/EditProfileModal/: Button.tsx  EditProfileModal.tsx  Input.tsx  Text.tsx  Title.tsx
src/components/Header/: Button.tsx  ClientIcon.tsx  Header.tsx  SettingsIcon.tsx  Title.tsx  TrafficLight.tsx
src/components/MacsploitModal/: MacsploitModal.tsx  Option.tsx  Text.tsx  index.tsx
src/constants/: app.ts  clients.ts  decompiler.ts  filters.ts  index.ts  strings.ts  ui.ts  urls.ts
src/types/: button.ts  config.ts  editProfileModal.ts  index.ts  install.ts  macsploit.ts  message.ts  modal.ts  profile.ts  state.ts  text.ts  update.ts  version.ts
src/utils/: clients.ts  config.ts  context.ts  index.ts  menuIcon.ts  modal.ts  notifications.ts  profiles.ts  versions.ts
(+53 files in other folders)
