[package]
name = "RaptorManager"
version = "0.1.7"
description = "An account manager for Roblox clients."
authors = ["DollarNoob"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
luau-lifter = { path = "./src/medal/luau-lifter" }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
regex = "1.12.2"
axum = { version = "0.8.6", features = ["ws"] }
tokio = "1.48.0"
tauri-plugin-opener = "2"
tower-http = { version = "0.6.8", features = ["decompression-gzip"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
